updated fields for productController and data, modified logout
