# swagger.json
@@ -14,6 +14,13 @@
     "/": {
       "get": {
         "description": "",
+        "parameters": [
+          {
+            "name": "logout",
+            "in": "query",
+            "type": "string"
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -88,6 +95,12 @@
                   "example": "any"
                 },
                 "itemType": {
+                  "example": "any"
+                },
+                "itemUnit": {
+                  "example": "any"
+                },
+                "itemStock": {
                   "example": "any"
                 }
               }
@@ -164,6 +177,12 @@
                   "example": "any"
                 },
                 "itemType": {
+                  "example": "any"
+                },
+                "itemUnit": {
+                  "example": "any"
+                },
+                "itemStock": {
                   "example": "any"
                 }
               }
